--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="leaf">
 			<article>
 				<h2>Message</h2>
-				<p>Forgiveness: We all wanted a peace of mind, peace environment, and a peaceful community. May we forgive each other. Anyway, me as your friend, a classmate, an enemy at kung ano niyo pa ako. Gusto kung magsorry na kung minsan ay nasungitan ko man kayo or kung may nagawa man akong di hindi niyo nagustuhan, sorry. However, I wish na sabihan niyo ako kung ano yung mali, hindi niyo nagustuhan na ginawa ko or may concern kayo the way I treated you para naman maitama ko at di na maulit pa.♥</p>
+				<p>Forgiveness: We all wanted a peace of mind, peace environment, and a peaceful community. May we forgive each other. Anyway, me as your friend, a classmate, an enemy at kung ano niyo pa ako. Gusto kung magsorry na kung minsan ay nasungitan ko man kayo or kung may nagawa man akong di hindi niyo nagustuhan, sorry. ♥</p>
 			</article>
 		</div>
 		<div class="leaf"></div>
