--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="leaf">
 			<article>
 				<h2>Message</h2>
-				<p>Circles: Napaka bilis ng oras, parang kailan lang. We have been created a lot of memories and shared a lot of gossips, even issues with someone. I hope you all still remember those moments and bonding we've created. As time pass by we're getting older at may mga bagay na rin tayong kailangan pag bigyan ng pansin. Hindi man next year pero hiling sa mga susunod na taon magakroon ulit nang sunod na pagkikita.</p>
+				<p>Circles: Napaka bilis ng oras, parang kailan lang. We have been created a lot of memories and shared a lot of gossips, even issues with someone. I hope you all still remember those moments and bonding we've created. As time pass by we're getting older at may mga bagay na rin tayong kailangan pag bigyan ng pansin. </p>
 			</article>
 		</div>
 		<div class="leaf"></div>
